# Backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  gunicorn.sh  pyproject.toml
config/: .env.template  gunicorn.conf.py
config/nginx/: nginx.conf
copilot/: .workspace
copilot/eedeor-back-1/: manifest.yml
core/: settings.py  storage_backends.py  urls.py
core/settings/: base.py  local.py  production.py
orders/: admin.py  models.py
orders/migrations/: 0001_initial.py  0002_alter_order_order_date.py
products/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_auto_20210821_1443.py  0002_productimage_producttype.py  0003_productimage.py  0003_rename_producttype_productimage_product_type.py  0004_alter_productimage_alt.py  0004_auto_20211215_1047.py  0005_alter_productimage_image.py  0005_auto_20211215_1419.py  0006_auto_20211223_0942.py  0006_auto_20211223_2200.py  0006_product_uuid.py  0007_auto_20211225_1554.py  0007_populate_uuid_values_20210903_0515.py  0008_brand.py  0008_remove_uuid_null_20210903_0516.py  0009_alter_productimage_image.py  0009_auto_20211229_0842.py  0010_product_additional_fields.py  0011_auto_20210930_1007.py  0012_alter_product_slug.py  0013_auto_20211003_0550.py  0014_alter_product_slug.py  0015_temp_dummy_model.py  0016_init_productimage_contenttype.py  0017_populate_productImage.py  0018_alter_productImage_nulltrue.py  0019_auto_20211006_1220.py  0020_delete_dummymodel.py  0021_alter_material_options.py  0022_alter_category_options.py  0023_auto_20211009_1113.py  0024_auto_20211009_1141.py  0025_bathroomproducts.py  0026_furnitureproducts.py  0027_decorationsproducts.py  0028_fabrictextileproducts.py  0029_hardwaretoolproducts_homeapplianceproducts.py  0030_auto_20211009_1542.py  0031_landscapeproducts_lightproducts_rugsmatfloorproducts_securityprotectionproducts.py
products/models/: __init__.py  base.py  bathroom.py  decorations.py  fabric_textile.py  furniture.py  hardware_tool.py  images.py  (+8 more)
rooms/: models.py  serializers.py  urls.py  views.py
user/: admin.py  models.py
user_profiles/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
(+19 files in other folders)
