[tool.poetry]
name = "green"
version = "0.1.0"
description = ""
authors = ["FiazAbrar <abrarfiaz.bd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
psycopg2-binary = "^2.9.1"
python-decouple = "^3.4"
djangorestframework = "^3.12.4"
Pillow = "^8.3.1"
django-versatileimagefield = "^2.1"
django-cors-headers = "^3.8.0"
djangorestframework-simplejwt = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
